<resources>
    <string name="app_name">TMDB_Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="artists">ARTISTS</string>
    <string name="no_movies_present">No Movies Present!!!</string>
    <string name="name">Name</string>
    <string name="image_view">Image View</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="no_artists_present">No Artists Present</string>
    <string name="tmdb_client">TMDB Client</string>
    <string name="no_tv_shows_present">No Tv Shows Present</string>
</resources>