<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="space_evenly"
        tools:context=".presentation.HomeFragment">

        <Button
            android:id="@+id/moviesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/movies" />

        <Button
            android:id="@+id/tvShowsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/tv_shows" />

        <Button
            android:id="@+id/artistsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/artists" />

    </com.google.android.flexbox.FlexboxLayout>

</layout>
