<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="16dp">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:flexDirection="column">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="32sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/image_view"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

        </com.google.android.flexbox.FlexboxLayout>

    </androidx.cardview.widget.CardView>
</layout>
